--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </head>
 <body>
     <div id="main">
-        <img src="logo.png" alt="Logo Image">
+        <img src="rhsologo.png" alt="Logo Image">
         <h1>River Hill Science Olympiad</h1>
         <h2>Our website is currently under construction. </h2>
         <div id="progress"><div id="fill"><div id="barpercent"><h3>60%</h3></div></div></div>
